# AKM-Math

./: .gitignore  CMakeLists.txt  README.md
AKMath/: AKMath.h  CMakeLists.txt
API/: API.h  CMakeLists.txt  Vector3.cpp  Vector3.h
example/: CMakeLists.txt  main.cpp
include/Math/: CMakeLists.txt  Constants.h  Math.h  Matrix33.cpp  Matrix33.h  Vector3.cpp  Vector3.h
include/akmMath/: CMakeLists.txt  Matrix33.cpp  Matrix33.h  Vector3.cpp  Vector3.h  akmMath.h
test/: CMakeLists.txt  Matrix33Test.cpp  Vector3Test.cpp
